--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>This is a webpage</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-
+<div class="border">
+    I has words.
+</div>
 </body>
 </html>
