--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-<div class="border">
+
+<div>
     I has words.
 </div>
+
+
+
+<script src="js/index.js"></script>
 </body>
 </html>
