changes to loops exercise

--- a/Blackjack.html
+++ b/Blackjack.html
@@ -5,7 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<div>
+    Open the console to play.
 
+</div>
 
 <script src="js/blackjack_Cards.js"></script>
 <script src="js/blackjack_Main.js"></script>
