Refactoring main after adding Player class in Blackjack

--- a/Blackjack.html
+++ b/Blackjack.html
@@ -10,6 +10,7 @@
 
 </div>
 
+<script src="js/blackjack_player.js"></script>
 <script src="js/blackjack_Cards.js"></script>
 <script src="js/blackjack_Main.js"></script>
 <script src="js/blackjack_Input.js"></script>
