completed Ace handling on blackjack and completed some testing. Also completed html exercise

--- a/Blackjack.html
+++ b/Blackjack.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Blackjack</title>
 </head>
 <body>
 <div>
-    Open the console to play.
+    To play:
+    <ol>
+        <li>Enter 2 in the first prompt</li>
+        <li>Open the console</li>
+        <li>Refresh the page</li>
+    </ol>
+
 
 </div>
 
