--- a/github.html
+++ b/github.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
+
         <form>
-            <label for="search">Search</label><br>
             <input type="text" id="search" name="search" placeholder="Search or jump to...">
             <button type="submit">Search</button>
         </form>
-        <nav>
-            <a class="nav-bar "href="#">Pull requests</a>
-            <a class="nav-bar "href="#">Issues</a>
-            <a class="nav-bar "href="#">Codespaces</a>
-            <a class="nav-bar "href="#">Marketplace</a>
-            <a class="nav-bar "href="#">Explore</a>
+        <nav class="nav-bar">
+            <a href="#">Pull requests</a>
+            <a href="#">Issues</a>
+            <a href="#">Codespaces</a>
+            <a href="#">Marketplace</a>
+            <a href="#">Explore</a>
         </nav>
 
     </header>
