Completed several exercises

--- a/welcome.html
+++ b/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
-    <link rel="stylesheet" href="styleWelcome.css">
+    <link rel="stylesheet" href="css/styleWelcome.css">
 </head>
 <body>
     <header>
