--- a/github.html
+++ b/github.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Teams Github Copy</title>
-    <link rel="stylesheet" href="styleGit.css">
+    <link rel="stylesheet" href="css/styleGit.css">
 
 </head>
 <body>
@@ -20,7 +20,31 @@
             <a href="#">Marketplace</a>
             <a href="#">Explore</a>
         </nav>
-
     </header>
+
+<div id="body-wrapper">
+        <table>
+            <tr>
+                <th colspan="3">Codeup's dev team</th>
+            </tr>
+            <tr>
+                <td>Kent Beck</td>
+                <td>Member</td>
+                <td>1 team</td>
+            </tr>
+            <tr>
+                <td>Codeup Instruction Staff</td>
+                <td>Member</td>
+                <td>1 team</td>
+            </tr>
+            <tr>
+                <td>Martin Fowler</td>
+                <td>Member</td>
+                <td>0 teams</td>
+            </tr>
+
+        </table>
+</div>
+
 </body>
 </html>
